fixed skills animation and page overflow

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -46,12 +46,14 @@ img {
 }
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Montserrat", sans-serif;
   color: white;
   background-color: #262626;
+  overflow-x: hidden;
 }
 
 a {
